--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -23,7 +23,7 @@ jobs:
         sudo apt-get install -y manpages-dev
         python -m pip install --upgrade pip setuptools wheel
         git submodule update --recursive --init
-        if [ -f program_graphs/requirements.txt ]; then pip install -r program_graphs/requirements.txt; fi
+        if [ -f requirements/default.txt ]; then pip install -r requirements/default.txt; fi
     - name: Test with unittest
       run: |
         python3 -m unittest discover
