--- a/.github/workflows/static-analysis.yml
+++ b/.github/workflows/static-analysis.yml
@@ -22,6 +22,7 @@ jobs:
         if [ -f requirements/types.txt ]; then pip install -r requirements/types.txt; fi
     - name: Type checking
       run: |
+        python3 -m mypy --install-types --non-interactive
         python3 -m mypy program_graphs/
     - name: Lint with flake8
       run: |
